--- a/index.html
+++ b/index.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="assets/css/extends.css">
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
     <title></title>
 </head>
 <body>
-哈哈哈哈，二货
+<nav class="navbar navbar-inverse navbar-static-top">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">君诺宝宝</a>
+        </div>
+        <div class="collapse navbar-collapse" id="navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="#"><span class="glyphicon glyphicon-leaf" aria-hidden="true"></span> 我的心情</a></li>
+                <li><a href="#"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> 我的故事</a></li>
+                <li><a href="#"><span class="glyphicon glyphicon-inbox" aria-hidden="true"></span> 我的宝藏</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<div class="container">
+    <div class="fb-profile">
+        <img align="left" class="fb-image-lg" src="assets/images/fb-background-image.png"/>
+        <img align="left" class="fb-image-profile thumbnail" src="assets/images/fb-profile-image.png"/>
+        <div class="fb-profile-text">
+            <h1>君诺宝宝</h1>
+            <p>一个十足的二货妹子</p>
+        </div>
+    </div>
+</div>
 </body>
 </html>
