--- a/index.html
+++ b/index.html
@@ -30,15 +30,22 @@
         </div>
     </div>
 </nav>
-<div class="container">
-    <div class="fb-profile">
-        <img align="left" class="fb-image-lg" src="assets/images/fb-background-image.png"/>
-        <img align="left" class="fb-image-profile thumbnail" src="assets/images/fb-profile-image.png"/>
-        <div class="fb-profile-text">
-            <h1>君诺宝宝</h1>
-            <p>一个十足的二货妹子</p>
+<div class="wrapper">
+    <div class="container">
+        <div class="fb-profile">
+            <img align="left" class="fb-image-lg" src="assets/images/fb-background-image.jpg"/>
+            <img align="left" class="fb-image-profile thumbnail" src="assets/images/fb-profile-image.png"/>
+            <div class="fb-profile-text">
+                <h1>君诺宝宝</h1>
+                <p>一个十足的二货妹子</p>
+            </div>
         </div>
     </div>
 </div>
+<footer class="footer text-center">
+    <div class="container">
+        <small>© Copyright 2015. Craft by junnuobaby ictxiangxin</small>
+    </div>
+</footer>
 </body>
 </html>
