--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title></title>
 </head>
 <body>
-<nav class="navbar navbar-inverse navbar-static-top">
+<nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
@@ -26,6 +26,7 @@
                 <li><a href="#"><span class="glyphicon glyphicon-leaf" aria-hidden="true"></span> 我的心情</a></li>
                 <li><a href="#"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> 我的故事</a></li>
                 <li><a href="#"><span class="glyphicon glyphicon-inbox" aria-hidden="true"></span> 我的宝藏</a></li>
+                <li><a href="https://ictxiangxin.github.io"><span class="glyphicon glyphicon-time" aria-hidden="true"></span> 时间坐标</a></li>
             </ul>
         </div>
     </div>
@@ -40,6 +41,48 @@
                 <p>一个十足的二货妹子</p>
             </div>
         </div>
+        <div class="row">
+            <div class="index-navbar">
+                <div class="btn-group btn-group-justified">
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-nav">
+                            <span class="glyphicon glyphicon-user"></span>
+                            <p>关于我</p>
+                        </button>
+                    </div>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-nav">
+                            <span class="glyphicon glyphicon-send"></span>
+                            <p>我的爱好</p>
+                        </button>
+                    </div>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-nav">
+                            <span class="glyphicon glyphicon-scissors"></span>
+                            <p>我的技能</p>
+                        </button>
+                    </div>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-nav">
+                            <span class="glyphicon glyphicon-leaf"></span>
+                            <p>我的作品</p>
+                        </button>
+                    </div>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-nav">
+                            <span class="glyphicon glyphicon-file"></span>
+                            <p>我的文章</p>
+                        </button>
+                    </div>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-nav">
+                            <span class="glyphicon glyphicon-hdd"></span>
+                            <p>我的收藏</p>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <footer class="footer text-center">
@@ -49,3 +92,16 @@
 </footer>
 </body>
 </html>
+
+<script>
+    var activeEl = 2;
+    $(function() {
+        var items = $('.btn-nav');
+        $( items[activeEl] ).addClass('active');
+        items.click(function() {
+            $( items[activeEl] ).removeClass('active');
+            $( this ).addClass('active');
+            activeEl = $( ".btn-nav" ).index( this );
+        });
+    });
+</script>
