--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="assets/css/extends.css">
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
-    <title></title>
+    <title>君诺宝宝</title>
+    <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon" />
 </head>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top">
