添加”关于我“页面

--- a/index.html
+++ b/index.html
@@ -46,41 +46,148 @@
             <div class="index-navbar">
                 <div class="btn-group btn-group-justified">
                     <div class="btn-group">
-                        <button type="button" class="btn btn-nav">
+                        <a type="button" class="btn btn-nav" href="#about" data-toggle="tab">
                             <span class="glyphicon glyphicon-user"></span>
                             <p>关于我</p>
-                        </button>
+                        </a>
                     </div>
                     <div class="btn-group">
-                        <button type="button" class="btn btn-nav">
+                        <a type="button" class="btn btn-nav" href="#interest" data-toggle="tab">
                             <span class="glyphicon glyphicon-send"></span>
                             <p>我的爱好</p>
-                        </button>
+                        </a>
                     </div>
                     <div class="btn-group">
-                        <button type="button" class="btn btn-nav">
+                        <a type="button" class="btn btn-nav" href="#skills" data-toggle="tab">
                             <span class="glyphicon glyphicon-scissors"></span>
                             <p>我的技能</p>
-                        </button>
+                        </a>
                     </div>
                     <div class="btn-group">
-                        <button type="button" class="btn btn-nav">
+                        <a type="button" class="btn btn-nav" href="#works" data-toggle="tab">
                             <span class="glyphicon glyphicon-leaf"></span>
                             <p>我的作品</p>
-                        </button>
+                        </a>
                     </div>
                     <div class="btn-group">
-                        <button type="button" class="btn btn-nav">
+                        <a type="button" class="btn btn-nav" href="#articles" data-toggle="tab">
                             <span class="glyphicon glyphicon-file"></span>
                             <p>我的文章</p>
-                        </button>
+                        </a>
                     </div>
                     <div class="btn-group">
-                        <button type="button" class="btn btn-nav">
+                        <a type="button" class="btn btn-nav" href="#collections" data-toggle="tab">
                             <span class="glyphicon glyphicon-hdd"></span>
                             <p>我的收藏</p>
-                        </button>
+                        </a>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="tab-content">
+                <div id="about" class="tab-pane fade active in">
+                    <ul class="timeline">
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="assets/images/about/1.png" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>No.1</h4>
+                                    <h4 class="subheading">我的身世</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">
+                                        我是一个功力超群的前端妹子，前世乃关中女侠，除恶扬善，护一方平安。后为小人所害，投缘今世，功力不减，转业编程。
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="line"></div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="assets/images/about/2.png" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>No.2</h4>
+                                    <h4 class="subheading">时而呆萌</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">
+                                        当你发现我十分呆萌时，我一定是在想问题（或者想吃的）。呆是一种气质，萌是一种心情，世界这么复杂，我要超凡脱俗。
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="line"></div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="assets/images/about/3.png" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>No.3</h4>
+                                    <h4 class="subheading">时而可人</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">
+                                        天生丽质的事情已经不想说了，心灵美才是至美。人不害我，我不害人，人若害我，我也害不了人。
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="line"></div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="assets/images/about/4.png" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>No.4</h4>
+                                    <h4 class="subheading">时而知性</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">
+                                        认真起来可是什么东西都会的哦，一副酷酷的眼镜，加上两块大屏幕，双手灵动于键盘，你可以想象。
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="line"></div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="assets/images/about/5.png" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>No.5</h4>
+                                    <h4 class="subheading">时而高冷</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">
+                                        别看我像只猫，脾气像老虎（母的），让我不爽的拒之千里之外，惹怒我的通通杀无赦。
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div id="interest" class="tab-pane fade">
+                    <p>b</p>
+                </div>
+                <div id="skills" class="tab-pane fade">
+                    <p>c</p>
+                </div>
+                <div id="works" class="tab-pane fade">
+                    <p>d</p>
+                </div>
+                <div id="articles" class="tab-pane fade">
+                    <p>e</p>
+                </div>
+                <div id="collections" class="tab-pane fade">
+                    <p>f</p>
                 </div>
             </div>
         </div>
@@ -95,13 +202,13 @@
 </html>
 
 <script>
-    var activeEl = 2;
+    var activeEl = 0;
     $(function() {
         var items = $('.btn-nav');
-        $( items[activeEl] ).addClass('active');
+        $(items[activeEl]).addClass('active');
         items.click(function() {
-            $( items[activeEl] ).removeClass('active');
-            $( this ).addClass('active');
+            $(items[activeEl]).removeClass('active');
+            $(this).addClass('active');
             activeEl = $( ".btn-nav" ).index( this );
         });
     });
