添加”我的兴趣“页面

--- a/index.html
+++ b/index.html
@@ -175,7 +175,75 @@
                     </ul>
                 </div>
                 <div id="interest" class="tab-pane fade">
-                    <p>b</p>
+                    <div class="container text-center">
+                        <div class="row">
+                            <div class="col-xs-12 col-sm-8 col-sm-offset-2" role="tabpanel">
+                                <div class="col-xs-4 col-sm-12">
+                                    <ul class="[ nav nav-justified ]" id="nav-tabs" role="tablist">
+                                        <li role="presentation" class="active">
+                                            <a href="#interst_1" aria-controls="interst_1" role="tab" data-toggle="tab">
+                                                <img class="img-circle" src="assets/images/interest/1.png" />
+                                                <span class="quote"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></span>
+                                            </a>
+                                        </li>
+                                        <li role="presentation" class="">
+                                            <a href="#interst_2" aria-controls="interst_2" role="tab" data-toggle="tab">
+                                                <img class="img-circle" src="assets/images/interest/2.png" />
+                                                <span class="quote"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></span>
+                                            </a>
+                                        </li>
+                                        <li role="presentation" class="">
+                                            <a href="#interst_3" aria-controls="interst_3" role="tab" data-toggle="tab">
+                                                <img class="img-circle" src="assets/images/interest/3.png" />
+                                                <span class="quote"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></span>
+                                            </a>
+                                        </li>
+                                        <li role="presentation" class="">
+                                            <a href="#interst_4" aria-controls="interst_4" role="tab" data-toggle="tab">
+                                                <img class="img-circle" src="assets/images/interest/4.png" />
+                                                <span class="quote"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></span>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="col-xs-8 col-sm-12">
+                                    <div class="tab-content" id="tabs-collapse">
+                                        <div role="tabpanel" class="tab-pane fade in active" id="interst_1">
+                                            <div class="tab-inner">
+                                                <p class="lead">超爱羽毛球，在一位大师的指导下，球技突飞猛进，已经一人之下万人之上啦！~</p>
+                                                <hr>
+                                                <p><h3><strong class="text-uppercase">羽毛球</strong></h3></p>
+                                            </div>
+                                        </div>
+
+                                        <div role="tabpanel" class="tab-pane fade" id="interst_2">
+                                            <div class="tab-inner">
+                                                <p class="lead">超爱Steam，超喜欢Ori and the Blind Forest！~</p>
+                                                <hr>
+                                                <p><h3><strong class="text-uppercase">玩游戏</strong></h3></p>
+                                            </div>
+                                        </div>
+
+                                        <div role="tabpanel" class="tab-pane fade" id="interst_3">
+                                            <div class="tab-inner">
+                                                <p class="lead">还有一大兴趣就是：买买买！！！</p>
+                                                <hr>
+                                                <p><h3><strong class="text-uppercase">疯狂购物</strong></h3></p>
+                                            </div>
+                                        </div>
+
+                                        <div role="tabpanel" class="tab-pane fade" id="interst_4">
+                                            <div class="tab-inner">
+                                                <p class="lead">熟练编写html、css、js，为什么会熟练？因为我喜欢！~</p>
+                                                <hr>
+                                                <p><h3><strong class="text-uppercase">代码达人</strong></h3></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div id="skills" class="tab-pane fade">
                     <p>c</p>
