完成”我的心情“页面

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">君诺宝宝</a>
+            <a class="navbar-brand" href="https://junnuobaby.github.io">君诺宝宝</a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#"><span class="glyphicon glyphicon-leaf" aria-hidden="true"></span> 我的心情</a></li>
+                <li><a href="mood.html"><span class="glyphicon glyphicon-leaf" aria-hidden="true"></span> 我的心情</a></li>
                 <li><a href="#"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> 我的故事</a></li>
                 <li><a href="#"><span class="glyphicon glyphicon-inbox" aria-hidden="true"></span> 我的宝藏</a></li>
                 <li><a href="https://ictxiangxin.github.io"><span class="glyphicon glyphicon-time" aria-hidden="true"></span> 时间坐标</a></li>
