--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
         <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="mood.html"><span class="glyphicon glyphicon-leaf" aria-hidden="true"></span> 我的心情</a></li>
-                <li><a href="#"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> 我的故事</a></li>
-                <li><a href="#"><span class="glyphicon glyphicon-inbox" aria-hidden="true"></span> 我的宝藏</a></li>
+                <li><a href="story.html"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> 我的故事</a></li>
+                <li><a href="precious.html"><span class="glyphicon glyphicon-inbox" aria-hidden="true"></span> 我的宝藏</a></li>
                 <li><a href="https://ictxiangxin.github.io"><span class="glyphicon glyphicon-time" aria-hidden="true"></span> 时间坐标</a></li>
             </ul>
         </div>
     </div>
 </nav>
 <div class="wrapper">
-    <div class="container">
+    <div class="container min-height">
         <div class="fb-profile">
             <img align="left" class="fb-image-lg" src="assets/images/fb-background-image.jpg"/>
             <img align="left" class="fb-image-profile thumbnail" src="assets/images/fb-profile-image.png"/>
             <div class="fb-profile-text">
                 <h1>君诺宝宝</h1>
-                <p>一个十足的二货妹子</p>
+                <p>任你血雨腥风，我自静若处子</p>
             </div>
         </div>
         <div class="row">
@@ -281,3 +281,398 @@
         });
     });
 </script>
+
+<style>
+    .btn-nav {
+        background-color: #fff;
+        border: 1px solid #e0e1db;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+    }
+    .btn-nav:hover {
+        color: #307da5;
+        cursor: pointer;
+        -webkit-transition: color 1s;
+        transition: color 1s;
+    }
+    .btn-nav.active {
+        color: #307da5;
+        padding: 2px;
+        border-top: 6px solid #307da5;
+        border-bottom: 6px solid #307da5;
+        border-left: 0;
+        border-right: 0;
+        box-sizing:border-box;
+        -moz-box-sizing:border-box;
+        -webkit-box-sizing:border-box;
+        -webkit-transition: border 0.3s ease-out, color 0.3s ease 0.5s;
+        -moz-transition: border 0.3s ease-out, color 0.3s ease 0.5s;
+        -o-transition: border 0.3s ease-out, color 0.3s ease 0.5s;
+        transition: border 0.3s ease-out, color 0.3s ease 0.5s;
+        -webkit-animation: pulsate 1.2s linear infinite;
+        animation: pulsate 1.2s linear infinite;
+    }
+    .btn-nav.active:before {
+        content: '';
+        position: absolute;
+        border-style: solid;
+        border-width: 6px 6px 0;
+        border-color: #307da5 transparent;
+        display: block;
+        width: 0;
+        z-index: 1;
+        margin-left: -6px;
+        top: 0;
+        left: 50%;
+    }
+    .btn-nav .glyphicon {
+        padding-top: 16px;
+        font-size: 40px;
+    }
+    .btn-nav.active p {
+        margin-bottom: 8px;
+    }
+    @-webkit-keyframes pulsate {
+        50% { color: #000; }
+    }
+    @keyframes pulsate {
+        50% { color: #000; }
+    }
+    @media (max-width: 480px) {
+        .btn-group {
+            display: block !important;
+            float: none !important;
+            width: 100% !important;
+            max-width: 100% !important;
+        }
+    }
+    @media (max-width: 600px) {
+        .btn-nav .glyphicon {
+            padding-top: 12px;
+            font-size: 26px;
+        }
+    }
+
+    .index-navbar {
+        margin-top: 100px;
+        margin-bottom: 20px;
+    }
+
+    .timeline {
+        position: relative;
+        padding:4px 0 0 0;
+        margin-top:22px;
+        list-style: none;
+    }
+
+    .timeline>li:nth-child(even) {
+        position: relative;
+        margin-bottom: 50px;
+        height: 180px;
+        right:-100px;
+    }
+
+    .timeline>li:nth-child(odd) {
+        position: relative;
+        margin-bottom: 50px;
+        height: 180px;
+        left:-100px;
+    }
+
+    .timeline>li:before,
+    .timeline>li:after {
+        content: " ";
+        display: table;
+    }
+
+    .timeline>li:after {
+        clear: both;
+        min-height: 170px;
+    }
+
+    .timeline > li .timeline-panel {
+        position: relative;
+        float: left;
+        width: 41%;
+        padding: 0 20px 20px 30px;
+        text-align: right;
+    }
+
+    .timeline>li .timeline-panel:before {
+        right: auto;
+        left: -15px;
+        border-right-width: 15px;
+        border-left-width: 0;
+    }
+
+    .timeline>li .timeline-panel:after {
+        right: auto;
+        left: -14px;
+        border-right-width: 14px;
+        border-left-width: 0;
+    }
+
+    .timeline>li .timeline-image {
+        z-index: 100;
+        position: absolute;
+        left: 50%;
+        border: 7px solid #3b5998;
+        border-radius: 100%;
+        background-color: #3b5998;
+        box-shadow: 0 0 5px #4582ec;
+        width: 200px;
+        height: 200px;
+        margin-left: -100px;
+    }
+
+    .timeline>li .timeline-image h4 {
+        margin-top: 12px;
+        font-size: 10px;
+        line-height: 14px;
+    }
+
+    .timeline>li.timeline-inverted>.timeline-panel {
+        float: right;
+        padding: 0 30px 20px 20px;
+        text-align: left;
+    }
+
+    .timeline>li.timeline-inverted>.timeline-panel:before {
+        right: auto;
+        left: -15px;
+        border-right-width: 15px;
+        border-left-width: 0;
+    }
+
+    .timeline>li.timeline-inverted>.timeline-panel:after {
+        right: auto;
+        left: -14px;
+        border-right-width: 14px;
+        border-left-width: 0;
+    }
+
+    .timeline>li:last-child {
+        margin-bottom: 0;
+    }
+
+    .timeline .timeline-heading h4 {
+        margin-top:22px;
+        margin-bottom: 4px;
+        padding:0;
+        color: #b3b3b3;
+    }
+
+    .timeline .timeline-heading h4.subheading {
+        margin:0;
+        padding:0;
+        text-transform: none;
+        font-size:18px;
+        color:#333333;
+    }
+
+    .timeline .timeline-body>p,
+    .timeline .timeline-body>ul {
+        margin-bottom: 0;
+        color:#808080;
+    }
+
+    .timeline>li:nth-child(odd) .line:before {
+        content: "";
+        position: absolute;
+        top: 60px;
+        bottom: 0;
+        left: 690px;
+        width: 4px;
+        height:340px;
+        background-color: #3b5998;
+        -ms-transform: rotate(-44deg);
+        -webkit-transform: rotate(-44deg);
+        transform: rotate(-44deg);
+        box-shadow: 0 0 5px #4582ec;
+    }
+
+    .timeline>li:nth-child(even) .line:before  {
+        content: "";
+        position: absolute;
+        top: 60px;
+        bottom: 0;
+        left: 450px;
+        width: 4px;
+        height:340px;
+        background-color: #3b5998;
+        -ms-transform: rotate(44deg);
+        -webkit-transform: rotate(44deg);
+        transform: rotate(44deg);
+        box-shadow: 0 0 5px #4582ec;
+    }
+
+    @media (min-width: 992px) and (max-width: 1199px) {
+        .timeline > li:nth-child(even) {
+            margin-bottom: 0px;
+            min-height: 0px;
+            right: 0px;
+        }
+        .timeline > li:nth-child(odd) {
+            margin-bottom: 0px;
+            min-height: 0px;
+            left: 0px;
+        }
+        .timeline>li:nth-child(even) .timeline-image {
+            left: 0;
+            margin-left: 0px;
+        }
+        .timeline>li:nth-child(odd) .timeline-image {
+            left: 690px;
+            margin-left: 0px;
+        }
+        .timeline > li:nth-child(even) .timeline-panel {
+            width: 76%;
+            padding: 0 0 20px 0px;
+            text-align: left;
+        }
+        .timeline > li:nth-child(odd) .timeline-panel {
+            width: 70%;
+            padding: 0 0 20px 0px;
+            text-align: right;
+        }
+        .timeline > li .line {
+            display: none;
+        }
+    }
+
+    @media (min-width: 768px) and (max-width: 991px) {
+        .timeline > li:nth-child(even) {
+            margin-bottom: 0px;
+            min-height: 0px;
+            right: 0px;
+        }
+        .timeline > li:nth-child(odd) {
+            margin-bottom: 0px;
+            min-height: 0px;
+            left: 0px;
+        }
+        .timeline>li:nth-child(even) .timeline-image {
+            left: 0;
+            margin-left: 0px;
+        }
+        .timeline>li:nth-child(odd) .timeline-image {
+            left: 520px;
+            margin-left: 0px;
+        }
+        .timeline > li:nth-child(even) .timeline-panel {
+            width: 70%;
+            padding: 0 0 20px 0px;
+            text-align: left;
+        }
+        .timeline > li:nth-child(odd) .timeline-panel {
+            width: 70%;
+            padding: 0 0 20px 0px;
+            text-align: right;
+        }
+        .timeline > li .line {
+            display: none;
+        }
+    }
+
+    @media only screen and (max-width: 767px) {
+        .timeline > li:nth-child(even) {
+            margin-bottom: 0px;
+            min-height: 0px;
+            right: 0px;
+        }
+        .timeline > li:nth-child(odd) {
+            margin-bottom: 0px;
+            min-height: 0px;
+            left: 0px;
+        }
+        .timeline>li .timeline-image {
+            position: static;
+            width: 150px;
+            height: 150px;
+            margin-bottom:0px;
+        }
+        .timeline>li:nth-child(even) .timeline-image {
+            left: 0;
+            margin-left: 0;
+        }
+        .timeline>li:nth-child(odd) .timeline-image {
+            float:right;
+            left: 0px;
+            margin-left:0;
+        }
+        .timeline > li:nth-child(even) .timeline-panel {
+            width: 100%;
+            padding: 0 0 20px 14px;
+        }
+        .timeline > li:nth-child(odd) .timeline-panel {
+            width: 100%;
+            padding: 0 14px 20px 0px;
+        }
+        .timeline > li .line {
+            display: none;
+        }
+    }
+
+    .nav.nav-justified > li > a {
+        position: relative;
+    }
+
+    .nav.nav-justified > li > a:hover,
+    .nav.nav-justified > li > a:focus {
+        background-color: transparent;
+    }
+
+    .nav.nav-justified > li > a > .quote {
+        position: absolute;
+        left: 0px;
+        top: 0;
+        opacity: 0;
+        width: 30px;
+        height: 30px;
+        padding: 5px;
+        background-color: #13c0ba;
+        border-radius: 15px;
+        color: #fff;
+    }
+
+    .nav.nav-justified > li.active > a > .quote {
+        opacity: 1;
+    }
+
+    .nav.nav-justified > li > a > img {
+        box-shadow: 0 0 0 5px #13c0ba;
+    }
+
+    .nav.nav-justified > li > a > img {
+        max-width: 100%;
+        opacity: .3;
+        -webkit-transform: scale(.8,.8);
+        transform: scale(.8,.8);
+        -webkit-transition: all 0.3s 0s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        transition: all 0.3s 0s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    }
+
+    .nav.nav-justified > li.active > a > img,
+    .nav.nav-justified > li:hover > a > img,
+    .nav.nav-justified > li:focus > a > img {
+        opacity: 1;
+        -webkit-transform: none;
+        transform: none;
+        -webkit-transition: all 0.3s 0s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        transition: all 0.3s 0s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    }
+
+    .tab-pane .tab-inner {
+        padding: 30px 0 20px;
+    }
+
+    @media (min-width: 768px) {
+        .nav.nav-justified > li > a > .quote {
+            left: auto;
+            top: auto;
+            right: 20px;
+            bottom: 0px;
+        }
+    }
+</style>
