添加页面背景

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>No.1</h4>
-                                    <h4 class="subheading">我的身世</h4>
+                                    <h4 class="subheading"><strong>我的身世</strong></h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
@@ -112,7 +112,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>No.2</h4>
-                                    <h4 class="subheading">时而呆萌</h4>
+                                    <h4 class="subheading"><strong>时而呆萌</strong></h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
@@ -129,7 +129,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>No.3</h4>
-                                    <h4 class="subheading">时而可人</h4>
+                                    <h4 class="subheading"><strong>时而可人</strong></h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
@@ -146,7 +146,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>No.4</h4>
-                                    <h4 class="subheading">时而知性</h4>
+                                    <h4 class="subheading"><strong>时而知性</strong></h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
@@ -163,7 +163,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>No.5</h4>
-                                    <h4 class="subheading">时而高冷</h4>
+                                    <h4 class="subheading"><strong>时而高冷</strong></h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
@@ -357,6 +357,7 @@
     .index-navbar {
         margin-top: 100px;
         margin-bottom: 20px;
+        box-shadow: 0 0 20px #151a35;
     }
 
     .timeline {
@@ -420,7 +421,7 @@
         border: 7px solid #3b5998;
         border-radius: 100%;
         background-color: #3b5998;
-        box-shadow: 0 0 5px #4582ec;
+        box-shadow: 0 0 50px #151a35;
         width: 200px;
         height: 200px;
         margin-left: -100px;
@@ -460,7 +461,7 @@
         margin-top:22px;
         margin-bottom: 4px;
         padding:0;
-        color: #b3b3b3;
+        color: #525252;
     }
 
     .timeline .timeline-heading h4.subheading {
@@ -474,7 +475,7 @@
     .timeline .timeline-body>p,
     .timeline .timeline-body>ul {
         margin-bottom: 0;
-        color:#808080;
+        color: #2f2f2f;
     }
 
     .timeline>li:nth-child(odd) .line:before {
@@ -489,7 +490,7 @@
         -ms-transform: rotate(-44deg);
         -webkit-transform: rotate(-44deg);
         transform: rotate(-44deg);
-        box-shadow: 0 0 5px #4582ec;
+        box-shadow: 0 0 10px #151a35;
     }
 
     .timeline>li:nth-child(even) .line:before  {
@@ -504,7 +505,7 @@
         -ms-transform: rotate(44deg);
         -webkit-transform: rotate(44deg);
         transform: rotate(44deg);
-        box-shadow: 0 0 5px #4582ec;
+        box-shadow: 0 0 10px #151a35;
     }
 
     @media (min-width: 992px) and (max-width: 1199px) {
@@ -661,6 +662,7 @@
         transform: none;
         -webkit-transition: all 0.3s 0s cubic-bezier(0.175, 0.885, 0.32, 1.275);
         transition: all 0.3s 0s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        /*box-shadow: 0 0 50px #151a35;*/
     }
 
     .tab-pane .tab-inner {
