--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
         transform: none;
         -webkit-transition: all 0.3s 0s cubic-bezier(0.175, 0.885, 0.32, 1.275);
         transition: all 0.3s 0s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-        /*box-shadow: 0 0 50px #151a35;*/
+        box-shadow: 0 0 50px #000000;
     }
 
     .tab-pane .tab-inner {
