使用更小的jpg图片放在”我的故事“中。

--- a/story.html
+++ b/story.html
@@ -48,7 +48,7 @@
                     <div class="timeline-badge primary"><a><i class="glyphicon glyphicon-record" rel="tooltip" title="2015-12-08 16:23"></i></a></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
-                            <img class="img-responsive" src="assets/images/story/1.png" />
+                            <img class="img-responsive" src="assets/images/story/1.jpg" />
                         </div>
                         <div class="timeline-body">
                             <p>深圳是一座临海的城市，风闻上去总带点咸味。海在南面，我在北面。这里没有闹市，也看不见繁华，每当我想起海边的海风时，总要历经数小时的颠簸，抵达那片天地。无忧无虑，无法无天，在细砂中奔跑，在浪花中沐浴。</p>
@@ -63,7 +63,7 @@
                     <div class="timeline-badge primary"><a><i class="glyphicon glyphicon-record invert" rel="tooltip" title="2015-12-08 16:23"></i></a></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
-                            <img class="img-responsive" src="assets/images/story/2.png" />
+                            <img class="img-responsive" src="assets/images/story/2.jpg" />
                         </div>
                         <div class="timeline-body">
                             <p>在一片叫做尼布尔山（Nibel）的森林中有个守护神“灵魂树”。一场庞大暴风雨促成灵魂树许多孩子中的Ori被夺走了并被一只母爱泛滥的母兽Naru认养，此后快乐地生活了许多年。灵魂树派其他孩子寻找Ori，但是损兵折将，不得已之下在一个黑夜中使用光之仪式借助强光照亮天空来召唤Ori。Ori看到了光，但不明白是什么意思。但灵魂树的光会对黑鸟kuro的孩子造成生命威胁。Kuro为了保护自己的孩子，决定铲除灵魂树这个威胁。把灵魂树的至宝Sein（赛安）夺走了，扔到了野外。灵魂树失去了行使魔力的法器，丧失了对Nibel森林的干涉和保护能力，三个生命元素的稳定状态被打破，尼布尔森林丧失了生机。由于Nibel森林开始枯萎凋零着，Naru被饿死，Ori再次成为孤儿，开始流浪。最后精疲力竭，即将死掉。灵魂树用最后的魔力，复活了Ori。</p>
