update the index and add a mood

--- a/mood.html
+++ b/mood.html
@@ -68,6 +68,14 @@
                     </p>
                     <p>2015-12-08</p>
                 </article>
+                <article class="white-panel">
+                    <img src="assets/images/mood/3.png" alt="">
+                    <h4>蹦哒蹦哒</h4>
+                    <p>
+                        好喜欢这个个人主页，萌萌哒还美美哒！
+                    </p>
+                    <p>2015-12-08</p>
+                </article>
             </section>
         </div>
     </div>
