update the index page

--- a/story.html
+++ b/story.html
@@ -35,7 +35,6 @@
 <div class="wrapper">
     <div class="container min-height">
         <div class="fb-profile">
-            <img align="left" class="fb-image-lg" src="assets/images/fb-background-image.jpg"/>
             <img align="left" class="fb-image-profile thumbnail" src="assets/images/fb-profile-image.png"/>
             <div class="fb-profile-text">
                 <h1>君诺宝宝</h1>
@@ -44,6 +43,21 @@
         </div>
         <div class="row">
             <ul class="timeline">
+                <li>
+                    <div class="timeline-badge primary"><a><i class="glyphicon glyphicon-record" rel="tooltip" title="2015-12-08 18:44"></i></a></div>
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
+                            <img class="img-responsive" src="assets/images/story/3.jpg" />
+                        </div>
+                        <div class="timeline-body">
+                            <p>前世千百次回眸，只为今生的擦肩而过，你是最美的奶茶。</p>
+                        </div>
+                        <div class="timeline-footer">
+                            <a><i class="glyphicon glyphicon-thumbs-up"></i></a>
+                            <a class="pull-right">junnuobaby</a>
+                        </div>
+                    </div>
+                </li>
                 <li>
                     <div class="timeline-badge primary"><a><i class="glyphicon glyphicon-record" rel="tooltip" title="2015-12-08 16:23"></i></a></div>
                     <div class="timeline-panel">
@@ -59,7 +73,7 @@
                         </div>
                     </div>
                 </li>
-                <li  class="timeline-inverted">
+                <li class="timeline-inverted">
                     <div class="timeline-badge primary"><a><i class="glyphicon glyphicon-record invert" rel="tooltip" title="2015-12-08 16:23"></i></a></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
@@ -221,6 +235,9 @@
     .timeline-title {
         margin-top: 0;
         color: inherit;
+    }
+    .timeline-body > p{
+        background-color: rgba(255, 255, 255, 0.5);
     }
     .timeline-body > p,
     .timeline-body > ul {
