--- a/index.html
+++ b/index.html
@@ -397,8 +397,8 @@
         width: 41%;
         padding: 0 20px 20px 30px;
         text-align: right;
+        background-color: rgba(255, 255, 255, 0.5);
     }
-
     .timeline>li .timeline-panel:before {
         right: auto;
         left: -15px;
