update the index page

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
                 <li><a href="precious.html"><span class="glyphicon glyphicon-inbox" aria-hidden="true"></span> 我的宝藏</a></li>
                 <li><a href="https://ictxiangxin.github.io"><span class="glyphicon glyphicon-time" aria-hidden="true"></span> 时间坐标</a></li>
             </ul>
+            <div class="pull-right radio">
+                <audio controls="controls">
+                    <source src="assets/audio/06.mp3">
+                </audio>
+            </div>
         </div>
     </div>
 </nav>
