--- a/mood.html
+++ b/mood.html
@@ -44,6 +44,14 @@
         <div class="row">
             <section id="pinBoot">
                 <article class="white-panel">
+                    <img src="assets/images/mood/6.jpg" alt="">
+                    <h4>愿岁月静好</h4>
+                    <p>
+                        悲喜枯荣如是本无分别，当来则来，当去则去，随心，随性，随缘！
+                    </p>
+                    <p>2015-12-11</p>
+                </article>
+                <article class="white-panel">
                     <img src="assets/images/mood/1.png" alt="">
                     <h4>初创主页</h4>
                     <p>
