--- a/story.html
+++ b/story.html
@@ -50,7 +50,8 @@
                             <img class="img-responsive" src="assets/images/story/3.jpg" />
                         </div>
                         <div class="timeline-body">
-                            <p>前世千百次回眸，只为今生的擦肩而过，你是最美的奶茶。</p>
+                            <p>前端小白成长记自此开始，愿一年后能有所进步，感恩我生命中经历的所有。无论好坏，愿能永远怀抱赤子之心。从哭着做完毕设到现在已经过了快两年了，
+                                有所得也有所失，但终无悔。</p>
                         </div>
                         <div class="timeline-footer">
                             <a><i class="glyphicon glyphicon-thumbs-up"></i></a>
