--- a/story.html
+++ b/story.html
@@ -44,7 +44,7 @@
         <div class="row">
             <ul class="timeline">
                 <li>
-                    <div class="timeline-badge primary"><a><i class="glyphicon glyphicon-record" rel="tooltip" title="2015-12-08 18:44"></i></a></div>
+                    <div class="timeline-badge primary"><a><i class="glyphicon glyphicon-record" rel="tooltip" title="2015-12-11 18:21"></i></a></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
                             <img class="img-responsive" src="assets/images/story/3.jpg" />
@@ -136,6 +136,10 @@
         background-color: #eeeeee;
         left: 50%;
         margin-left: -1.5px;
+    }
+    .timeline-heading img{
+        width: 100%;
+        height: 100%;
     }
     .timeline > li {
         margin-bottom: 20px;
