--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="fb-profile">
             <img align="left" class="fb-image-profile thumbnail" src="assets/images/fb-profile-image.png"/>
             <div class="fb-profile-text">
-                <h1>君诺宝宝<small>二货记得拿药</small></h1>
+                <h1>君诺宝宝</h1>
                 <p>任你血雨腥风，我自静若处子</p>
             </div>
         </div>
