--- a/mood.html
+++ b/mood.html
@@ -44,6 +44,14 @@
         <div class="row">
             <section id="pinBoot">
                 <article class="white-panel">
+                    <img src="assets/images/mood/7.jpg" alt="">
+                    <h4>奥日与黑暗森林</h4>
+                    <p>
+                        今晚玩游戏玩得太嗨，心脏充血太快，受不了，太笨！
+                    </p>
+                    <p>2015-12-14</p>
+                </article>
+                <article class="white-panel">
                     <img src="assets/images/mood/6.jpg" alt="">
                     <h4>愿岁月静好</h4>
                     <p>
