change some text

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                                     <div class="tab-content" id="tabs-collapse">
                                         <div role="tabpanel" class="tab-pane fade in active" id="interst_1">
                                             <div class="tab-inner">
-                                                <p class="lead">超爱羽毛球，在一位大师的指导下，球技突飞猛进，已经一人之下万人之上啦！~</p>
+                                                <p class="lead">喜欢羽毛球，超爱运动后大汗淋漓的感觉！~</p>
                                                 <hr>
                                                 <p><h3><strong class="text-uppercase">羽毛球</strong></h3></p>
                                             </div>
