--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             <ul class="nav navbar-nav">
                 <li><a href="mood.html"><span class="glyphicon glyphicon-leaf" aria-hidden="true"></span> 我的心情</a></li>
                 <li><a href="story.html"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> 我的故事</a></li>
-                <li><a href="precious.html"><span class="glyphicon glyphicon-inbox" aria-hidden="true"></span> 我的宝藏</a></li>
+                <!--<li><a href="precious.html"><span class="glyphicon glyphicon-inbox" aria-hidden="true"></span> 我的宝藏</a></li>-->
+                <li><a href="https://github.com/junnuobaby" target='_blank'><span class="glyphicon glyphicon-inbox" aria-hidden="true"></span> 我的github</a></li>
                 <li><a href="https://ictxiangxin.github.io"><span class="glyphicon glyphicon-time" aria-hidden="true"></span> 时间坐标</a></li>
             </ul>
             <div class="pull-right radio">
